--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -52,12 +52,21 @@
           "pattern": "",
           "name": "Main",
           "target": "Main"
+        },
+        {
+          "pattern": "RouteDetail",
+          "name": "Detail",
+          "target": "Detail"
         }
       ],
       "targets": {
         "Main": {
           "viewId": "Main",
           "viewName": "Main"
+        },
+        "Detail": {
+          "viewId": "Detail",
+          "viewName": "Detail"
         }
       }
     },
